--- a/Project01/pro01.html
+++ b/Project01/pro01.html
@@ -6,6 +6,6 @@
     <title>Project theme color changer</title>
 </head>
 <body>
-    <h1>Select anyone collored box to change the colour of theme</h1>
+    <h1> this -Select anyone collored box to change the colour of theme</h1>
 </body>
 </html>
